--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "moments": "0.0.2",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "socket.io": "^2.2.0"
   }
 }
